fix: visible textarea for captcha
- custom badException for bad captcha
- recaptcha reload on error

--- a/src/main/webapp/WEB-INF/static/app/styles/main.css
+++ b/src/main/webapp/WEB-INF/static/app/styles/main.css
@@ -135,6 +135,10 @@ textarea{
   display: inline-block !important;
 }
 
+.g-recaptcha-response {
+  display: none !important;
+}
+
 /*Language modal*/
 .modal-lang-picker > div.form-group
 {
